Bug 117560 - Writer: embedded Calc spreadsheet with underlined text does not show up underlined
Summary: Writer: embedded Calc spreadsheet with underlined text does not show up under...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.0.3.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard:
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Calc-Embedded Regressions-EMFPlus-Rework
  Show dependency treegraph
 
Reported: 2018-05-11 11:11 UTC by meiklehmann
Modified: 2020-08-23 13:01 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample document (12.88 KB, application/vnd.oasis.opendocument.text)
2018-05-11 11:11 UTC, meiklehmann
Details
screenshot of the format cell configuration (91.70 KB, image/png)
2018-05-11 11:14 UTC, meiklehmann
Details
screenshot in writer (40.85 KB, image/png)
2018-05-11 11:15 UTC, meiklehmann
Details
Extracted EMF+ image is showing correctly (992 bytes, image/emf)
2018-10-29 23:17 UTC, Bartosz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description meiklehmann 2018-05-11 11:11:02 UTC
Description:
Please see the steps below.

Steps to Reproduce:
Please open the attached sample Writer file. It has an embedded Calc OLE object where in a number cell the font effect double underline has been set.

Editing the Calc document inline shows the double underlined number, but closing it or creating a PDF file will not show the double underline any more.

Actual Results:  
no double underlined number is shown

Expected Results:
the number should be shown double-underline


Reproducible: Always


User Profile Reset: No



Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:59.0) Gecko/20100101 Firefox/59.0
Comment 1 meiklehmann 2018-05-11 11:11:26 UTC
Created attachment 142029 [details]
sample document
Comment 2 meiklehmann 2018-05-11 11:14:43 UTC
Created attachment 142030 [details]
screenshot of the format cell configuration
Comment 3 meiklehmann 2018-05-11 11:15:21 UTC
Created attachment 142031 [details]
screenshot in writer
Comment 4 Xisco Faulí 2018-06-12 11:54:58 UTC
Regression introduced by:

author	Armin Le Grand <Armin.Le.Grand@cib.de>	2017-08-22 10:05:15 +0200
committer	Thorsten Behrens <Thorsten.Behrens@CIB.de>	2017-08-22 14:42:28 +0200
commit 302af8c2da58719844d22483b65a9fe5b3674684 (patch)
tree 9a0d81cb81e1130e9467f1e4de2077cea78c38f5
parent cc2cb0123ac599bf25c5e17b97b5d7bf93d3e487 (diff)
sw: Use primitive renderer for graphics
To allow using the prepared VectorData of imported
Metafiles (and EMF+), let Writer use a Primitive
Renderer for Graphic output. For now, use a temp
PrimitiveRenderer (until sw is fully adapted to
primitives).

Bisected with: bibisect-linux64-6.0

Adding Cc: to Armin Le Grand
Comment 5 Bartosz 2018-10-29 23:17:19 UTC
Created attachment 146153 [details]
Extracted EMF+ image is showing correctly
Comment 6 Bartosz 2018-10-29 23:31:53 UTC
The EMF+ format is not supporting double-underline. 

You could set it single-underline:
  FontStyleUnderline If set, the font typeface MUST be rendered with a line underneath the baseline of the characters.
  If clear, the font typeface MUST be rendered without a line underneath the baseline.
Comment 7 Xisco Faulí 2019-10-24 09:36:13 UTC
The commit that introduced this issue was reverted in https://cgit.freedesktop.org/libreoffice/core/commit/?id=83baaec3a087f83d0ad3371d55671d9496771586