tdf#117560 Fix displaying graphic object attributes

Change-Id: Idaa6eee9591fd1c15e6e62d0995a6f21879aa452